--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Modelo</title>
+  <title>Calculadora de IMC</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -20,7 +20,6 @@
       <input type="text" name="" class="input-altura">
       <button>Calcular</button>
       <div class="resultado">
-        teste
       </div>
     </form>
   </section>
